--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,20 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+
 android {
     compileSdk 32
+
+    viewBinding {
+        enabled true
+    }
+
+    dataBinding {
+        enabled true
+    }
 
     defaultConfig {
         applicationId "com.example.wutyauthenticator"
@@ -35,4 +47,26 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("com.squareup.moshi:moshi:1.11.0")
+    implementation("com.squareup.moshi:moshi-kotlin:1.11.0")
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.11.0")
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //OkHttp
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.3"))
+
+    // define any required OkHttp artifacts without version
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+
+    //Hilt
+    implementation "com.google.dagger:hilt-android:${dagger}"
+    kapt "com.google.dagger:hilt-android-compiler:$dagger"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'jp.wasabeef:picasso-transformations:2.4.0'
 }
