--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,9 @@ plugins {
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 32
-
-    viewBinding {
-        enabled true
-    }
-
-    dataBinding {
-        enabled true
-    }
 
     defaultConfig {
         applicationId "com.example.wutyauthenticator"
@@ -36,6 +27,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
     }
 }
 
@@ -60,13 +55,5 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
 
-    //Hilt
-    implementation "com.google.dagger:hilt-android:${dagger}"
-    kapt "com.google.dagger:hilt-android-compiler:$dagger"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-
-    //Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'jp.wasabeef:picasso-transformations:2.4.0'
+    implementation 'com.github.utsavstha:adonis-websocket-client-android:1.1'
 }
